# windows-temp-cleaner

./: .gitignore  Cargo.toml  README.md  app_manifest.rc  build.rs
src/: app.rs  file_operations.rs  file_type.rs  loading_bar.rs  log_display.rs  main.rs
